@@ -1,3 +1,9 @@
+2008-11-12  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Data/WellKnownText, Data/WellKnownText/SimpleFeatureAccess.cs,
+	  Data/WellKnownText.cs, Cumberland.csproj: rename WellKnownText to
+	  SimpleFeatureAccess
+
 2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
 
 	
